apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - port: 80
      targetPort: 9696
  type: ClusterIP
